# OCamlChat

./: README.md  client.ml  dune  server.ml
Chat/: Chat.opam  dune-project
Chat/_build/: .db  .digest-db  log
Chat/_build/default/: Chat.dune-package  Chat.install
Chat/_build/default/.dune/: configurator  configurator.v2
Chat/_build/default/lib/: Chat.cma  Chat.cmxa  Chat.cmxs
Chat/_build/default/lib/.Chat.objs/byte/: chat.cmi  chat.cmo  chat.cmt
Chat/_build/default/lib/.Chat.objs/native/: chat.cmx
Chat/_build/default/lib/.merlin-conf/: lib-Chat
Chat/_build/default/test/: test_server.ml
Chat/_build/default/test/.Chat.eobjs/byte/: dune__exe__Chat.cmi  dune__exe__Chat.cmti
Chat/_build/default/test/.Chat.eobjs/native/: dune__exe__Chat.cmx
Chat/_build/default/test/.merlin-conf/: exe-Chat  exe-test_client  exe-test_server
Chat/_build/default/test/.test_client.eobjs/byte/: dune__exe__Test_client.cmi  dune__exe__Test_client.cmti
Chat/_build/default/test/.test_client.eobjs/native/: dune__exe__Test_client.cmx
Chat/_build/default/test/.test_server.eobjs/byte/: dune__exe__Test_server.cmi  dune__exe__Test_server.cmti
Chat/_build/default/test/.test_server.eobjs/native/: dune__exe__Test_server.cmx
Chat/_build/install/default/lib/Chat/: META  dune-package  opam
Chat/lib/: dune
Chat/test/: dune  test_client.cmi  test_client.cmo  test_client.ml
